# marinerx-quant-cc

./: .env.example  .gitignore  .neon  .railwayignore  BUILD_DECISIONS.md  Dockerfile  EVIDENCE.md  FINAL_BUILD_REPORT.md  GROK_KICKOFF_PROMPT.md  PHASE02.txt  PHASE03.txt  PHASE04.txt  PHASE05.txt  PHASE06.txt  PHASE07.txt  PHASE09.txt  PHASE15_UI_MATCH.txt  PHASE16_RISKFOLIO_QUANTSTATS.txt  PHASE17_FORECAST_RIGOR.txt  PROGRESS.md  README.md  START_HERE.md  claude.md  codex.md  grok.md  main.py  pyproject.toml  pytest_phase16_full.txt  pytest_phase17_full.txt  railway.json  render.yaml
command-center/: 00B_PRE_FLIGHT_ADDENDUM.md  00_MASTER_BRIEF.md  00_ORCHESTRATOR_KICKOFF.md  01_CORE_INFRA.md  02_DATA_LAYER.md  03_INTERNALS_HEATMAPS.md  04_INDICATORS_REGIME.md  05_STRATEGY_BACKTEST.md  06_VALIDATION_GAUNTLET.md  07_RESEARCH_LAB.md  08_RISK_ENGINE.md  09_DECISION_ENGINE.md  10_EXECUTION.md  11_JOURNAL_PERF_REPORTS.md  12_INTERFACE.md  13_TESTS_ACCEPTANCE.md  14_RAILWAY_DEPLOYMENT.md  15_UI_MATCH_AND_RAILWAY_DEPLOY.md  INDEX.md
config/: analytics.yaml  tradeify_150k_select_flex.yaml
data/catalog/: bars_reg.parquet
docs/: API_REFERENCE.md  CHATGPT_FRESH_SESSION_HANDOFF.md  DATA_MODEL.md  GROK_CONTINUATION_DIRECTIVE.md  MARINERX_LABS_CLAUDE_COMPLETE_PROJECT_SUMMARY.md  MARINERX_LABS_CODEX_HANDOFF.md
docs/deployment/: R2_STORAGE.md  (+14 more)
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/: .env.example  README.md  pyproject.toml
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/docs/: ARCHITECTURE.md  DATA_CONNECTOR_SPEC.md  DEPLOYMENT_CHECKLIST.md  RISK_POLICY.md  SECURITY_AND_CREDENTIALS.md  TRADEIFY_TFD_DASHBOARD_CONNECTOR_SPEC.md  TRADOVATE_CONNECTOR_SPEC.md  UI_SPEC.md
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/prompts/: CODEX_IMPLEMENTATION_PROMPT.md  GROK_BUILD_PROMPT.md  GROK_MASTER_DATA_CONNECTOR_PROMPT.md  SHORT_MESSAGE_TO_GROK_TERMINAL.md  SUBAGENTS_TRADEIFY_DATA_TEAM.md
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/src/marinerx_tradeify/: contract_specs.py  payout_engine.py  risk_engine.py  router.py  rules.py
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/src/marinerx_tradeify/connectors/: __init__.py  normalizer.py  tradeify_dashboard_connector.py  tradovate_connector.py
docs/tradeify-connector-package/MarinerX_Tradeify_150K_Payout_Engine_v2/tests/: test_tradeify_150k.py
mockups/: MOCKUP_REFERENCE.md
scripts/: fix_render_deploy.ps1  gen_pages_js.py  setup_render_r2.ps1  test_old_schema.py  validate_neon_url.py
tests/: conftest.py  test_end_to_end_replay.py  test_safety_gates.py
tradeify-sync/: .env.example  .gitignore  00_MASTER_BRIEF.md  01_SCAFFOLD_CONFIG_MODELS.md  02_BROWSER_AUTH.md  03_DISCOVERY.md  04_SCRAPERS_EXPORTS.md  05_NORMALIZE_STORAGE.md  06_PIPELINE_SCHED_CLI.md  07_TESTS_DOCS_ACCEPTANCE.md  INDEX.md  README.md  config.yaml  main.py  pyproject.toml  selectors.yaml
tradeify-sync/src/tradeify_sync/: __init__.py  config.py  constants.py  models.py
tradeify-sync/src/tradeify_sync/auth/: __init__.py  login.py  session.py
tradeify-sync/src/tradeify_sync/browser/: __init__.py  guards.py  humanize.py  manager.py
tradeify-sync/src/tradeify_sync/normalize/: __init__.py  mapper.py
tradeify-sync/src/tradeify_sync/pipeline/: __init__.py  sync.py
tradeify-sync/src/tradeify_sync/scrapers/: __init__.py  accounts.py  base.py  fixtures.py  tfd_parser.py  trades.py
tradeify-sync/src/tradeify_sync/storage/: __init__.py  db.py  repository.py  schema.py
tradeify-sync/src/tradeify_sync/utils/: logging.py  timeparse.py
tradeify-sync/tests/: conftest.py  test_fixture_scrape.py  test_guards.py  test_models_hash.py  test_repository_dedup.py
tradeify-sync/tests/fixtures/: accounts.html  trades.html
(+181 files in other folders)
