[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradeify-sync"
version = "0.1.0"
description = "Read-only Tradeify dashboard sync engine for MarinerX Quant Hub"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.49.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "apscheduler==3.10.4",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "python-dotenv==1.0.1",
    "keyring==25.5.0",
    "pyotp==2.9.0",
    "typer==0.15.1",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-PyYAML==6.0.12.20240917",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradeify_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true