[project]
name = "marinerx-tradeify-150k"
version = "0.1.0"
description = "Tradeify 150K Select Flex risk and payout overlay for MarinerX Labs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "playwright>=1.45",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
